Fix from Felix Berger to get RVA2 frames a little closer to working.  The more complicated fix for #107025 will follow shortly.

BUG:95545


git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/kdesupport/taglib@437091 283d02a7-25f6-0310-bc7c-ecb5cbfe19da